objects/HealthCloudGA__Provider__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EHRPractitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EHR Practitioner</label>
        <referenceTo>HealthCloudGA__EhrPractitioner__c</referenceTo>
        <relationshipLabel>Providers</relationshipLabel>
        <relationshipName>Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RelatedContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Providers</relationshipLabel>
        <relationshipName>Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RelatedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Provider</label>
    <nameField>
        <label>Provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>